# must-tutorial

./: NOTES
Hands-on-1/: .example.yml  example.c
Hands-on-2/: .lulesh.yml  .sol.yml  CMakeLists.txt  Makefile  README.md  filterfile.txt  lulesh-comm.cc  lulesh.cc  lulesh.h
